added resolve to navigation

--- a/src/templates/map-key.html
+++ b/src/templates/map-key.html
@@ -71,7 +71,7 @@
                 <div class="checkbox">
                     <input id="transit" type="checkbox" ng-model="transit" ng-checked="layers.overlays['transit'].visible" ng-click="toggleLayer('transit')">
                     <label for="transit">
-                        All transit
+                        Shuttle stops
                     </label>
                 </div>
             </div>
