--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -1,9 +1,9 @@
-<div class="scrollable">
+<div class="scrollable" ng-controller="MainController">
   <h1 class="scrollable-header app-name"><a ui-sref="main" ui-turn-off='uiSidebarLeft' class="wordmark">UCSC Mobile</a></h1>  
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
-      <a class="list-group-item" ui-sref="main.directory" ui-sref-active="selected"><i class="icon-vcard"></i> Directory</a>
-      <a class="list-group-item" ui-sref="main.emergency" ui-sref-active="selected"><i class="icon-fire"></i> Emergency</a>
+      <a class="list-group-item" ng-repeat="item in mainMenu" ui-sref="{{item.url}}" ui-sref-active="selected"><i class="{{item.icon}}"></i> {{item.title}}</a>
+      <!-- <a class="list-group-item" ui-sref="main.emergency" ui-sref-active="selected"><i class="icon-fire"></i> Emergency</a>
       <a class="list-group-item" ui-sref="main.news" ui-sref-active="selected"><i class="icon-newspaper"></i> News</a>
       <a class="list-group-item" ui-sref="main.social" ui-sref-active="selected"><i class="icon-asl"></i> Social</a>
       <a class="list-group-item" ui-sref="main.support" ui-sref-active="selected"><i class="icon-help"></i> Support</a>
@@ -11,7 +11,7 @@
       <a class="list-group-item" ui-sref="main.about" ui-sref-active="selected"><i class="icon-info"></i> About</a>
       <a class="list-group-item" ui-sref="main.events" ui-sref-active="selected"><i class="icon-calendar-1"></i> Events</a>
       <a class="list-group-item" ui-sref="main.library" ui-sref-active="selected"><i class="icon-book-open"></i> Library</a>
-      <a class="list-group-item" ui-sref="main.map" ui-sref-active="selected"><i class="icon-map"></i> Map</a>
+      <a class="list-group-item" ui-sref="main.map" ui-sref-active="selected"><i class="icon-map"></i> Map</a> -->
     </div>
   </div>
   <h6 class="scrollable-footer"><i class="icon-desktop"></i> <a href="http://www.ucsc.edu" target="_blank">UCSC Website</a></h6>
